--- a/estilos/index.css
+++ b/estilos/index.css
@@ -858,8 +858,7 @@ footer .arriba{
         margin-left: -60px;
         display: flex;
     }
-
-    
-
-   
+    .galeria-work img{
+        aling-text: center;
+    }
 }
