--- a/estilos/index.css
+++ b/estilos/index.css
@@ -857,7 +857,7 @@ footer .arriba{
     }
     .img-work video{
     aling-items: center;
-        width: 600;
-        heigth:300;
+        width: 600px;
+        heigth:300px;
 }
 }
