--- a/estilos/index.css
+++ b/estilos/index.css
@@ -859,6 +859,6 @@ footer .arriba{
     aling-items: center;
         width: 700px;
         heigth: 400px;
-        margin-left:50px;
+        padding-left: 60px;
 }
 }
