--- a/estilos/index.css
+++ b/estilos/index.css
@@ -853,7 +853,7 @@ footer .arriba{
 
     .galeria-work{
         display: block;
-        
+        width: 150%;
     }
     .img-work video{
     aling-items: center;
@@ -861,4 +861,5 @@ footer .arriba{
         heigth: 250px;
         position: fixed;
 }
+    
 }
