--- a/estilos/index.css
+++ b/estilos/index.css
@@ -852,7 +852,7 @@ footer .arriba{
     }
 
     .galeria-work{
-        display: block;
+width: 110%
     }
     .img-work video{
         width: 800px;
