--- a/estilos/index.css
+++ b/estilos/index.css
@@ -861,7 +861,7 @@ width: 110%
         margin-left: -50px;
         display:none;
 }
-    img-work{
+    .img-work{
         margin-left: -150px;
         display:none;
     }
